@@ -64,7 +64,8 @@ enum clsptr {
 	BUILDINGPTR,
 	NEBULAPTR,
 	ASTEROIDPTR,
-	ENHANCEMENTPTR
+	ENHANCEMENTPTR,
+	MISSILEPTR
 };
 
 class VDU;
